--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "amqplib": "^0.8.0",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
+    "concurrently": "^6.2.0",
+    "docker": "^1.0.0",
+    "json-server": "^0.16.3",
+    "rabbitmq": "0.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "typescript-rabbitmq": "0.0.8",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -34,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.8",
+    "@types/react-dom": "^17.0.5",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
